@@ -1,23 +1,32 @@
 package ua.fam.tos.service;
 
 import org.springframework.stereotype.Service;
+import ua.fam.tos.domain.boarditem.BoardItem;
 import ua.fam.tos.domain.boarditem.survey.Survey;
 import ua.fam.tos.domain.boarditem.survey.SurveyQuestion;
+import ua.fam.tos.domain.boarditem.survey.SurveyStatus;
 import ua.fam.tos.dto.SurveyDTO;
 import ua.fam.tos.repository.BoardItemRepository;
+import ua.fam.tos.repository.BoardRepository;
 import ua.fam.tos.repository.ContributorRepository;
 
 import java.util.Date;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class SurveyService {
 
     private final ContributorRepository contributorRepository;
     private final BoardItemRepository boardItemRepository;
+    private final BoardRepository boardRepository;
 
-    public SurveyService(ContributorRepository contributorRepository, BoardItemRepository boardItemRepository) {
+    public SurveyService(ContributorRepository contributorRepository, BoardItemRepository boardItemRepository, BoardRepository boardRepository) {
         this.contributorRepository = contributorRepository;
         this.boardItemRepository = boardItemRepository;
+        this.boardRepository = boardRepository;
     }
 
     public long save(SurveyDTO dto, long boardId) {
@@ -32,9 +41,30 @@ public class SurveyService {
                     question.setUserAnswers(surveyQuestionDTO.getUserAnswers());
                     return question;
                 })
-                .toList());
+                .collect(Collectors.toList()));
+        return save(survey, boardId);
+    }
+
+    public long save(Survey survey, long boardId) {
         survey.setPublicationTime(new Date());
+        Map<String, SurveyStatus> statuses = survey.getSubmissionStatuses();
+        boardRepository.findById(boardId).get().getAllContributors().forEach(contributor -> {
+            statuses.put(contributor.getUsername(), SurveyStatus.UNSUBMITTED);
+        });
         return boardItemRepository.save(survey, boardId);
+    }
+
+    public void updateAnswers(List<String> answers, String username, long boardId, long surveyId) {
+        Optional<Survey> toBeUpdatedOptional = findById(boardId, surveyId);
+        Survey toBeUpdated = toBeUpdatedOptional.get();
+        for (int i = 0; i < answers.size(); i++) {
+            toBeUpdated.getQuestions().get(i).setUserAnswer(username, answers.get(i));
+        }
+    }
+
+    public Optional<Survey> findById(long boardId, long surveyId) {
+        Optional<BoardItem> result = boardItemRepository.findById(boardId, surveyId);
+        return result.map(boardItem -> (Survey) boardItem);
     }
 
 }
